# demo-cv-champitech

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/11062025_yolov8/: args.yaml  results.csv
models/train_d0_val_d5/: args.yaml
models/train_d5-6-7-8-9_val_d10/: args.yaml  results.csv
models/train_d5-6-7-8_val_d9/: args.yaml  results.csv
models/train_d5-6-7_val_d8/: args.yaml  results.csv
models/train_d5-6_val_d7/: args.yaml  results.csv
models/train_d5_val_d6/: args.yaml  results.csv
models/yolo11n_50epochs/: args.yaml  results.csv
models/yolo11s_50epochs/: args.yaml  results.csv
models/yolo12s_150epochs/: args.yaml  results.csv
models/yolo12s_50epochs/: args.yaml  results.csv
models/yolov8m_150epochs/: args.yaml  results.csv
models/yolov8m_25epochs/: args.yaml  results.csv
models/yolov8m_50epochs/: args.yaml  results.csv
models/yolov8n_150epochs/: args.yaml  results.csv
models/yolov8n_25epochs/: args.yaml  results.csv
models/yolov8s_150epochs/: args.yaml  results.csv
models/yolov8s_25epochs/: args.yaml  results.csv
models/yolov8s_50epochs/: args.yaml  results.csv
scripts/: run_experiments.py
src/: dataset_csv.py  dataset_ultralytics.py
src/datasets/: day_loader.py
src/features/: add_date_to_images.py
src/modeling/: predict.py  train_incremental.py  train_temporal.py  train_ultralytics.py
src/tools/: calcular_dia_cultivo.py  split_dataset.py
