[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "demo_champitech"
version = "0.0.1"
description = "Detecci\u00f3n temprana de primordios"
authors = [
  { name = "Itecam" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["demo_champitech"]
include = ["pyproject.toml", "demo_champitech/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["demo_champitech"]
force-sort-within-sections = true

